<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_fragment01_overviewtitle"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment01_lb_nfhAviable"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_fragment01_posts"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp" >
            </ListView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment01_personRequiredForNFH"
                android:id="@+id/textView3"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="12sp"
                android:layout_marginLeft="3dp"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/fragment01_signInForNFH"
                android:visibility="invisible"
                style="?android:attr/borderlessButtonStyle" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_fragment01_overviewtitle"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment03_calendar_nfh"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_fragment01_posts"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnPrev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&lt;&lt;"
                    style="?android:attr/borderlessButtonStyle"/>

                <TextView
                    android:id="@+id/textView_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&gt;&gt;"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fragment03_calendar_nfh"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp">

                <ImageView
                    android:layout_marginLeft="3dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:id="@+id/fragment03_calendar_nfh_legend1"/>

                <TextView
                    android:layout_marginLeft="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment03_calendar_nfh_legend1"
                    android:textSize="12sp"/>

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:id="@+id/fragment03_calendar_nfh_legend2"/>

                <TextView
                    android:layout_marginLeft="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment03_calendar_nfh_legend2"
                    android:textSize="12sp"/>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>