<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_fragment01_overviewtitle"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fragment01_lb_tweet"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimaryLight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_fragment01_posts"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fragment01_textView_tweet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/fragment01_lb_nextdate"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_marginBottom="3dp"/>

                <TextView
                    android:id="@+id/fragment01_textView_tweet_author"
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/fragment01_lb_nextdate"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_marginBottom="3dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_fragment01_overviewtitle"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fragment01_lb_nfhAviable"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimaryLight" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_fragment01_posts"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp" >
                </ListView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment01_personRequiredForNFH"
                    android:id="@+id/textView3"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="12sp"
                    android:layout_marginLeft="3dp"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/fragment01_signInForNFH"
                    android:visibility="invisible"
                    style="?android:attr/borderlessButtonStyle" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_fragment01_overviewtitle"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fragment01_lb_dateoverview"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimaryLight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_fragment01_posts"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/fragment01_lb_nextdate"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_marginBottom="3dp" />

                <ListView
                    android:id="@+id/listView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp" >
                </ListView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_fragment01_overviewtitle"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fragment01_lb_nextBirthday"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimaryLight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_fragment01_posts"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/listView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp" >
                </ListView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
