<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_fragment01_overviewtitle"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment02_nextDates"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_fragment01_posts"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:minHeight="20dp">
            </ListView>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/fragment02_allDates"
                style="?android:attr/borderlessButtonStyle" />

        </LinearLayout>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_fragment01_overviewtitle"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment02_calender"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryLight" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_fragment01_posts"
            android:orientation="vertical" >


            <LinearLayout
                xmlns:mycalendar="http://schemas.android.com/apk/res/com.example.d062434.drkapp"
                android:id="@+id/fragment02_calendar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="300dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnPrev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&lt;&lt;"
                        style="?android:attr/borderlessButtonStyle"/>
                    <TextView
                        android:id="@+id/textView_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="&gt;&gt;"
                        style="?android:attr/borderlessButtonStyle"/>
                </LinearLayout>

                <com.example.d062434.drkapp.helper.CustomCalendarView
                    android:id="@+id/calendarview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@color/colorPrimaryLight"
                    mycalendar:cellTextSize="4sp"
                    mycalendar:lineColor="#c0c0c0"
                    mycalendar:lineWidth="1dp"
                    mycalendar:showLines="false"
                    mycalendar:showWeekLabel="true"
                    mycalendar:validCellTextColor="@color/colorActionBar" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>

